<resources>
    <string name="app_name">Smart Stegnography</string>

    <string name="create_account_click_here">Create Account! Click Here</string>
    <string name="already_have_an_account_click_to_login">Already Have an Account. Click to Login</string>
    <string name="signup">SIGNUP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="user_name">User Name</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>