<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.SignUp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg1">

        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".6"
            android:background="@color/black">

        </FrameLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            >
            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                >
                <ImageView
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/joinus_text"
                    />

                <EditText
                    android:id="@+id/editText_email"
                    style="@style/Font_family_light"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_style"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/padding_16"
                    android:hint="@string/email"
                    android:layout_margin="5dp"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editText_pass"
                    style="@style/Font_family_light"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="@dimen/padding_16"
                    android:background="@drawable/edit_style"
                    android:hint="@string/password"
                    android:layout_margin="5dp"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editText_confirPass"
                    style="@style/Font_family_light"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="@dimen/padding_16"
                    android:background="@drawable/edit_style"
                    android:hint="@string/confirm_password"
                    android:layout_margin="5dp"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="15sp" />


                <Button
                    android:id="@+id/btn_signUp"
                    style="@style/Font_family_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_8"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/btnsignup_gradient"
                    android:text="@string/signup"
                    android:fontFamily="@font/gotham"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:padding="20dp"
                        android:gravity="start"
                        android:fontFamily="@font/gotham"
                        android:text="@string/already_have_an_account_click_to_login" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>
